fix: collapse not works in mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,7 +13,7 @@ div.more-content {
 }
 
 .expand-btn {
-	max-height: 1000px;
+	max-height: 100%;
 	border-bottom: none;
 }
 
